--- a/shoeviewer.html
+++ b/shoeviewer.html
@@ -36,7 +36,7 @@
     <script>
     function showCreate(){
         document.getElementById('showCreateButton').style.display="none"
-        document.getElementById('bookTable').style.display="none"
+        document.getElementById('shoesTable').style.display="none"
         document.getElementById('createUpdateForm').style.display="block"
         document.getElementById('createLabel').style.display="inline"
         document.getElementById('updateLabel').style.display="none"
